@@ -1,6 +1,8 @@
 1.1.4:
  - log format change. add [error] for error log
  - latency improvement.
+ - fix: terminate process when file close error.
+ -
 
 1.1.3:
  - sort msync --members by hostname
